# _root-geant4

./: README.md
_examples/mucos/: CMakeLists.txt  README  action.cc  action.hh  construction.cc  construction.hh  detector.cc  detector.hh  event.cc  event.hh  generator.cc  generator.hh  main.cc  physics.cc  physics.hh  run.cc  run.hh  stepping.cc  stepping.hh  z-run.mac  z-vis.mac
_examples/mucos/analysis/: mucos.C
combined/: README.md
combined/01_g4_to_root/: CMakeLists.txt  README.md
combined/01_g4_to_root/analysis/: plot_hits.py  viewHits.C
combined/01_g4_to_root/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  TelescopeHit.hh  TelescopeSD.hh
combined/01_g4_to_root/macros/: gps_proton.mac  proton.mac  visual.mac
combined/01_g4_to_root/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  TelescopeSD.cc  main.cc
docs/: cheatsheets.md
geant4/: README.md
geant4/01_minimal_detector/: CMakeLists.txt  README.md
geant4/01_minimal_detector/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
geant4/01_minimal_detector/macros/: init_vis.mac  run.mac  vis_settings.mac
geant4/01_minimal_detector/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  main.cc
geant4/02_electromagnetic_showcase/: CMakeLists.txt  README.md
geant4/02_electromagnetic_showcase/include/: DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
geant4/02_electromagnetic_showcase/macros/: gps_electron.mac  gps_gamma.mac  init_vis.mac  run_electron.mac  run_gamma.mac
geant4/02_electromagnetic_showcase/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  main.cc
geant4/03_multithread_run/: CMakeLists.txt  README.md
geant4/03_multithread_run/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
geant4/03_multithread_run/macros/: batch.mac  beam.mac  interactive.mac
geant4/03_multithread_run/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  main.cc
root/: README.md
root/01_basic_histogram/: Makefile  README.md  main.cpp
root/02_ttree_analysis/: Makefile  README.md  analysis.cpp  main.cpp
root/02_ttree_analysis/data/: events.csv
root/03_pyroot_fitting/: README.md  overlay_with_matplotlib.py  spectrum_fit.py
root/04_root_macros/: README.md  batch.sh  config.json  run_all.C  spectrumMacro.C
